k8s/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 2                        # Ensures high availability 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nadaessa/bookstore-backend:v32
          ports:
            - containerPort: 8000
          env:                         # Set environment variables that app can read (Passes runtime config into the app)
            - name: PORT               # Tells app which port to bind to internally
              value: "8000" 
            - name: mongoDBURL         # Used by app to connect to the MongoDB database service
              value: "http://mongodb-service:27017"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
