k8s/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-service
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: "mongodb-service"
  replicas: 1
  minReadySeconds: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
        - name: "bookstore-pvc"
          persistentVolumeClaim:
            claimName: "bookstore-pvc"
      containers:
      - name: mongodb-container
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: bookstore-pvc
          mountPath: /usr/share/nginx/html
